# TC-ADV

./: README.md  pyproject.toml  run_chapter4.sh  run_tcadv_record.sh  run_tcadv_record_tiny.sh
.claude/: settings.json
checkpoints/tcadv_smoke/: best_discriminator.json
configs/bridge/: a10_gdelt_lmca.yaml  a10_icews18_lmca.yaml  full_gdelt_lmca.yaml  full_icews18_lmca.yaml  icews14_record_tiny_qwen25_05b_a10.yaml  local_smoke_lmca.yaml
configs/experiments/: a10_gdelt.yaml  a10_icews14.yaml  a10_icews18.yaml  ablation_gamma_sweep.yaml  ablation_no_ecm.yaml  ablation_no_trm.yaml  ablation_static_margin.yaml  bridge_smoke.yaml  full_gdelt.yaml  full_icews14.yaml  full_icews18.yaml  icews14_demo_plus_qwen25_05b_a10.yaml  icews14_record_qwen25_05b_a10.yaml  icews14_record_tiny_qwen25_05b_a10.yaml  smoke.yaml
notebooks/: tcadv_record_workflow.ipynb
outputs/: code_bundle.md
outputs/chapter4/: REPORT.md
outputs/manual_bridge_smoke/: run_manifest.json  test_diagnostics.json  test_metrics.json  test_predictions.jsonl  train_history.jsonl  valid_diagnostics.json  valid_metrics.json  (+1 more)
scripts/: aggregate_seeds.py  evaluate.py  export_code.py  make_icews14_record_tiny.py  materialize_chapter4_results.py  plot_chapter4_figures.py  prepare_dataset.py  render_chapter4_report.py  run_chapter4_sweeps.py  run_suite.py  train.py
tests/: test_bridge_smoke_pipeline.py  test_config_loader.py  test_ecm.py  test_error_analysis.py  test_exporter.py  test_objectives.py  test_pipeline_fixture.py  test_prepare_data.py  test_sweeps.py  test_trainer_regressions.py  test_trm.py
(+244 files in other folders)
