[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-adv"
version = "0.1.0"
description = "TC-ADV: Temporal Constraint-based Adversarial Verification for temporal KG completion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
runtime = [
  "torch>=2.1",
  "PyYAML>=6.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tc-adv = "tc_adv.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
